fix: improve card style on mobile via smaller icons and arbitrary translateY calculations
All done using media queries. The queries take xs: (450px) as base.

--- a/src/app/routes/home-page/sections/experiments/experiments.component.css
+++ b/src/app/routes/home-page/sections/experiments/experiments.component.css
@@ -29,6 +29,15 @@
 	transform: translateY(var(--yPos, -120px)) scale(var(--scale, 1));
 }
 
+@media (max-width: 450px) {
+	.card-container.collapsed .card {
+		max-height: 100px;
+		overflow: hidden;
+		transform: translateY(calc(var(--yPos, -120px) + 20px))
+			scale(var(--scale, 1));
+	}
+}
+
 .card-container.expanded .card {
 	transform: translateY(0) scale(1);
 }
